# huggingface-model-downloader

./: .gitignore  README.md  pyproject.toml
app/: downloader.py  main.py  settings.py
